2006-10-19  Eric Botcazou  <ebotcazou@adacore.com>

	* fold-const.c (add_double): Rename to add_double_with_sign.
	Add 'unsigned_p' parameter and take it into account for the overflow.
	(mul_double): Rename to mul_double_with_sign. 
	Add 'unsigned_p' parameter and take it into account for the overflow.
	(fold_div_compare): Call add_double_with_sign instead of add_double
	and mul_double_with_sign instead of mul_double, passing them the
	unsignedness of the type.
	* tree.h (add_double): Macroize.
	(add_double_with_sign): New prototype.
	(mul_double): Macroize.
	(mul_double_with_sign): New prototype.

2006-10-19 Ira Rosen  <irar@il.ibm.com>

        Backport from mainline:
        2006-08-07  Victor Kaplansky <victork@il.ibm.com>

        PR tree-optimization/26969
        * tree-vect-analyze.c (vect_analyze_loop_form): Add check of latch
        with an empty list of PHIs.

2006-10-18  Richard Guenther  <rguenther@suse.de>

	Backport from mainline:
	2006-08-16  Zdenek Dvorak <dvorakz@suse.cz>

	PR gcov/profile/26570
	* value-prof.c (static_values): Removed.
	(tree_find_values_to_profile): Do not set static_values.
	(find_values_to_profile): Do not free static_values.
	* profile.c (instrument_values): Do not free the values.
	(branch_prob): Free the values.

2006-10-18  Richard Guenther  <rguenther@suse.de>

	Backport from mainline:
	2006-05-11  Jan Hubicka  <jh@suse.cz>

	PR debug/26881
	* Makefile.in (gt-cgraphunit.h): Add.
	* cgraphunit.c: Include gt-cgraphunit.h.
	(local_static_output): New static vector.
	(cgraph_varpool_assemble_decl): Defer outputting debug info
	for local statics to...
	(cgraph_varpool_debug_local_statics): ... here.
	(cgraph_optimize): Use it.

2006-10-18  Richard Guenther  <rguenther@suse.de>

	* except.c (set_nothrow_function_flags): Fix return value.

2006-10-17  Paul Brook  <paul@codesourcery.com>

	Backport from mainline:
	* config/arm/arm.c (arm_rtx_costs_1): Handle multiply-accumulate.

2006-10-16  Richard Guenther  <rguenther@suse.de>